--- a/package.json
+++ b/package.json
@@ -19,16 +19,33 @@
     "ui:add": "pnpm dlx shadcn-ui@latest add",
     "test:watch": "jest --watch --coverage --detectOpenHandles",
     "test:build": "jest --passWithNoTests --runInBand",
-    "test:commit": "jest --detectOpenHandles --runInBand"
+    "test:commit": "jest --detectOpenHandles --runInBand",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.407.0",
     "next": "14.2.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@storybook/addon-essentials": "^8.2.1",
+    "@storybook/addon-interactions": "^8.2.1",
+    "@storybook/addon-links": "^8.2.1",
+    "@storybook/addon-onboarding": "^8.2.1",
+    "@storybook/blocks": "^8.2.1",
+    "@storybook/nextjs": "^8.2.1",
+    "@storybook/react": "^8.2.1",
+    "@storybook/test": "^8.2.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
@@ -42,6 +59,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-tailwindcss": "^3.17.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
@@ -50,9 +68,10 @@
     "only-allow": "^1.2.1",
     "plop": "^4.0.1",
     "postcss": "^8",
-    "ts-node": "^10.9.2",
     "prettier": "3.3.2",
+    "storybook": "^8.2.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "engines": {
